--- a/first-project/index.html
+++ b/first-project/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"/>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MERN Project - Ecommerce App</title>
+    <title>AffiGlow</title>
   </linkrel="stylesheet">
   <body>
     <div id="root"></div>
